fix overflow

--- a/style.scss
+++ b/style.scss
@@ -75,12 +75,6 @@ h6 {
 	font-size: inherit;
 }
 
-.lock body {
-	overflow: hidden;
-	-ms-touch-action: none;
-	touch-action: none;
-}
-
 .wrapper {
 	min-height: 100%;
 	display: -webkit-box;
@@ -90,7 +84,7 @@ h6 {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 .wrapper > main {
@@ -206,7 +200,7 @@ body {
 	width: 480px;
 	background-color: rgb(240, 241, 242);
 	border-radius: 0px;
-	overflow: hidden;
+	overflow-x: hidden;
 	min-height: 480px;
 	@media (max-width: 500px) {
 		width: 100%;
@@ -254,7 +248,6 @@ img {
 // }
 
 #root {
-	height: 100%;
 	width: 100%;
 }
 
@@ -453,7 +446,6 @@ img {
 	position: relative;
 	z-index: 1;
 	padding: 10px;
-	margin-top: 32px;
 
 	display: flex;
 
@@ -492,6 +484,5 @@ img {
 	}
 
 	#properties {
-		margin-top: 30%;
 	}
 }
